# embedding-gemma-openvino

./: .gitignore  CMakeLists.txt  LICENSE  README.md  embedding_gemma_benchmark.cpp  embedding_gemma_benchmark.py  genai_embedding_test.cpp  stsb_retrieval.tsv  stsb_test.tsv  test_dataset.tsv
